# diana-compose-email-qt4

./: .gitignore  CMakeLists.txt  README.md  diana_compose_email.1
debian/: changelog  control  copyright  rules
src/: CMakeLists.txt  attached_files_model.cc  attached_files_model.h  compose_email.cc  compose_email.h  compose_email.qrc  compose_email_de.ts  compose_email_es.ts  compose_email_generated.qrc  compose_email_nb.ts  compose_email_ru.ts  compose_email_sv.ts  main.cc
